# rag-reference-pipeline

./: .env-template  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
api/: main.py
rag/: chunker.py  config.py  embeddings.py  pipeline.py  retriever.py  vectorstore.py
